[package]
name = "logic"
version = "0.0.0"
edition = "2021"

[dependencies]
messages-macro = { path = "messages-macro" }
binary-encoding = { path = "binary-encoding" }

bincode = "=2.0.0-rc.3"
thiserror = "1.0.63"
time = { version = "0.3.36", features = ["local-offset" ] }
uniffi = { version = "0.25.0" }

[dev-dependencies]
serde_json = "1.0"

[features]
default = [] 
server = [] # Includes logic which can be used only on server
uniffi = [] # Generate uniffi C++ bindings for the client
