[package]
name = "api-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.5"
aws-config = { version = "1.5.6", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.47.0"
futures = "0.3.30"
lazy_static = "1.5.0"
logic = { path = "../../logic", features = ["server"] }
rand = "0.8.5"
tokio = { version = "1.40.0", features = ["macros"] }
ulid = { version = "1.1.3", features = ["serde"] }
